--- a/exercicio-02.html
+++ b/exercicio-02.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>INTRODUÇÃO A PROGRAMAÇÃO-HTML & CSS</title>
+    <title>Exercício 02 | HTML/CSS</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
@@ -27,7 +27,7 @@ Em resumo, Fortaleza, Trairi e Caucaia são três cidades encantadoras e que mer
    <a href="https://chat.openai.com/"> Fonte: Chat GPT</a>
    <br>
    
-   <img scr="Fortaleza,_Brazil_(4)_(cropped).jpg" width="800px" height="413px"> <br>
-   <img scr="maceio09.jpg" width="636px" height="477px"> <br>
+   <img scr="Fortaleza,_Brazil_(4)_(cropped).jpg" width="300px" height="300px"> <br>
+   <img scr="maceio09.jpg" width="300px" height="300px"> <br>
 </body>
 </html>
