--- a/exercicio-02.html
+++ b/exercicio-02.html
@@ -27,7 +27,7 @@ Em resumo, Fortaleza, Trairi e Caucaia são três cidades encantadoras e que mer
    <a href="https://chat.openai.com/"> Fonte: Chat GPT</a>
    <br>
    
-   <img scr="Fortaleza,_Brazil_(4)_(cropped).jpg" width="300px" height="300px"> <br>
-   <img scr="maceio09.jpg" width="300px" height="300px"> <br>
+   <img scr="1.png" width="300px" height="300px"> <br>
+   <img scr="2.png" width="300px" height="300px"> <br>
 </body>
 </html>
