--- a/exercicio-02.html
+++ b/exercicio-02.html
@@ -27,7 +27,7 @@ Em resumo, Fortaleza, Trairi e Caucaia são três cidades encantadoras e que mer
    <a href="https://chat.openai.com/"> Fonte: Chat GPT</a>
    <br>
    
-   <img scr="1.png">
-   <img scr="Fortaleza,_Brazil_(4)_(cropped).jpg"> <br>
+   <img scr="1.png" width="200px" height="200px">
+   <img scr="Fortaleza,_Brazil_(4)_(cropped).jpg" width="200px" height="200px"> <br>
 </body>
 </html>
