--- a/guaramiranga.html
+++ b/guaramiranga.html
@@ -35,7 +35,7 @@
     </style>
   </head>
 <body>
-	<h1>Bora Turistas?</h1>
+	<h1>Bora turistas?</h1>
 	
 	<h2>Guaramiranga</h2>
 	<p>Guaramiranga é um município localizado no estado do Ceará, no Brasil. É uma cidade serrana com clima frio e agradável. É um dos destinos turísticos mais visitados do Ceará e é conhecida por seus festivais de jazz e de teatro.</p>
