--- a/gramado.html
+++ b/gramado.html
@@ -35,7 +35,7 @@
     </style>
   </head>
 <body>
-	<h1>Bora Turistas?</h1>
+	<h1>Bora turistas?</h1>
 	
 	<h2>Gramado</h2> 	<p>Gramado é uma cidade localizada na serra gaúcha, no Rio Grande do Sul, Brasil. É um destino turístico conhecido por seu clima frio e agradável, paisagens exuberantes, arquitetura europeia e sua famosa gastronomia. Além disso, a cidade é famosa por seus eventos, como o Festival de Cinema de Gramado e o Natal Luz de Gramado.</p>
 	<a href="principal-aula-4.html">Voltar para página principal</a>
